experience inner page done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-header *ngIf="isToken && !isAuthPage() && isVisb" [userInfo]="usrInfo"></app-header>
+<!-- <app-header *ngIf="isToken && !isAuthPage() && isVisb" [userInfo]="usrInfo"></app-header>
 <div class="content" *ngIf="isVisb">
   <app-sidebar *ngIf="isToken && !isAuthPage()"></app-sidebar>
-  <router-outlet></router-outlet>
-</div>
+</div> -->
+<router-outlet></router-outlet>
