--- a/src/app/web-app/collection/collection-inner/collection-inner.component.html
+++ b/src/app/web-app/collection/collection-inner/collection-inner.component.html
@@ -1,1 +1,408 @@
-<p>collection-inner works!</p>
+<div class="main main-employee p-3 container mt-3">
+  <h3 class="mb-4 clearfix heading align-self-center">
+    Testabc
+    <div class="float-right d-flex">
+      <div class="dropdown align-self-center mr-3">
+        <div class="curs-ptr" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true"
+          aria-expanded="false">
+          <i class="fas fa-share-square"></i>
+        </div>
+        <div class="dropdown-menu" aria-labelledby="shareDD">
+          <a class="dropdown-item curs-ptr" (click)="openLgModal(email)"><i class="fa fa-envelope mr-1"></i>Email</a>
+          <a class="dropdown-item curs-ptr" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i>Get a link</a>
+        </div>
+      </div>
+      <div class="curs-ptr align-self-center mr-3">
+        <i class="fas fa-trash-alt"></i>
+      </div>
+      <div class="dropdown align-self-center mr-3">
+        <div class="curs-ptr" type="button" id="optionsDD" data-toggle="dropdown" aria-haspopup="true"
+          aria-expanded="false">
+          <i class="fas fa-ellipsis-h"></i>
+        </div>
+        <div class="dropdown-menu" aria-labelledby="optionsDD">
+          <a class="dropdown-item curs-ptr" (click)="openModal(duplicate)"><i class="fas fa-copy mr-1"></i>Duplicate</a>
+          <a class="dropdown-item curs-ptr" (click)="openModal(rename)"><i class="fas fa-edit mr-1"></i>Rename</a>
+          <a class="dropdown-item dd curs-ptr">
+            <i class="fa fa-download mr-1"></i>Download
+            <div class="dropdown-menu">
+              <a class="dropdown-item"><i class="fas fa-file-pdf mr-1"></i>As a single PDF</a>
+              <a class="dropdown-item"><i class="fas fa-file-alt mr-1"></i>As separate items</a>
+            </div>
+          </a>
+        </div>
+      </div>
+      <i [ngClass]="{'fa mr-4 curs-ptr align-self-center': true, 'fa-list-ul': view, 'fa-th-large': !view}"
+        (click)="switchView()"></i>
+      <button class="btn btn-primary" (click)="openModal(addResource)">Add Resource</button>
+    </div>
+  </h3>
+  <div class="mt-2 row my-files" *ngIf="view">
+    <div class="card-container col-lg-3 col-md-4 col-sm-6 my-3 mx-auto mx-sm-0" *ngFor="let t of testArr">
+      <div class="card curs-ptr">
+        <div class="card-body">
+          <div class="imagePreview text-center">
+            <img src="assets/images/discription.png">
+          </div>
+          <div class="options rounded">
+            <div class="dropleft">
+              <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">
+                <i class="fas fa-share-square"></i>
+              </button>
+              <div class="dropdown-menu" aria-labelledby="shareDD">
+                <h6 class="ml-2 text-white-50">External Sharing</h6>
+                <a class="dropdown-item" (click)="openLgModal(email)"><i class="fa fa-envelope mr-1"></i>Email</a>
+                <a class="dropdown-item" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i>Get a link</a>
+                <div class="dropdown-divider"></div>
+                <h6 class="ml-2 text-white-50">Internal Sharing</h6>
+                <a class="dropdown-item" (click)="openModal(shareColl)"><i class="fa fa-user-friends mr-1"></i>Share
+                  with
+                  colleagues</a>
+              </div>
+            </div>
+            <div class="btn my-1" (click)="openModal(addtoCollection)">
+              <i class="fas fa-folder-plus"></i>
+            </div>
+            <div class="btn">
+              <i class="fas fa-trash-alt"></i>
+            </div>
+          </div>
+        </div>
+        <div class="card-footer">
+          <div class="name">Test</div>
+          <div class="float-left text-secondary d-flex">
+            <div class="date">Oct 10, 2020</div>
+            <div class="mx-2">l</div>
+            <div class="items">3 Items</div>
+          </div>
+          <div class="float-right">
+            <mat-checkbox></mat-checkbox>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="mt-2 row my-files" *ngIf="!view">
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>
+            <mat-checkbox></mat-checkbox>
+          </th>
+          <th>Name<i class="fas fa-sort-down ml-1 align-top"></i></th>
+          <th>Date Modified<i class="fas fa-sort-down ml-1 align-top"></i></th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let t of testArr">
+          <td class="align-middle">
+            <mat-checkbox></mat-checkbox>
+          </td>
+          <td class="align-middle">
+            <div class="d-flex">
+              <div class="imagePreview border mr-2">
+                <img src="assets/images/discription.png">
+              </div>
+              <div class="name align-self-center">Abc def</div>
+            </div>
+          </td>
+          <td class="align-middle">16 Oct, 2020 14:40</td>
+          <td class="align-middle options">
+            <div class="d-flex">
+              <div class="dropleft">
+                <button class="btn" type="button" id="shareDD" data-toggle="dropdown" aria-haspopup="true"
+                  aria-expanded="false">
+                  <i class="fas fa-share-square"></i>
+                </button>
+                <div class="dropdown-menu" aria-labelledby="shareDD">
+                  <a class="dropdown-item" (click)="openLgModal(email)"><i class="fa fa-envelope mr-1"></i>Email</a>
+                  <a class="dropdown-item" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i>Get a
+                    link</a>
+                </div>
+              </div>
+              <div class="btn" (click)="openModal(addtoCollection)">
+                <i class="fas fa-folder-plus"></i>
+              </div>
+              <div class="btn">
+                <i class="fas fa-trash-alt"></i>
+              </div>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<!-- fixed div on selecting a collection -->
+<div class="row mx-auto fixed-bottom px-3" style="width: 90%; background-color: #fff; height: 50px;">
+  <div class="selected-items text-secondary align-self-center">1 item selected</div>
+  <div class="mr-1 ml-3 align-self-center">|</div>
+  <div class="btn btn-outline-primary border-0 align-self-center">Clear</div>
+  <div class="btn btn-light align-self-center ml-auto bg-white" (click)="openLgModal(email)"><i
+      class="fa fa-envelope mr-1"></i>Email</div>
+  <div class="btn btn-light align-self-center bg-white" (click)="openModal(getLink)"><i class="fa fa-link mr-1"></i>Get
+    a
+    link</div>
+  <div class="btn btn-light align-self-center bg-white" (click)="openModal(addtoCollection)"><i
+      class="fa fa-folder-plus mr-1"></i>Add to collection</div>
+  <div class="btn btn-primary align-self-center"><i class="fas fa-trash-alt mr-1"></i>Delete</div>
+</div>
+
+<!-- new collection modal -->
+<ng-template #newCollection let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Create a Collection</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body" ngbAutofocus>
+    <mat-form-field appearance="outline" class="w-100">
+      <mat-label>Name</mat-label>
+      <input matInput type="text" placeholder="New Collection Name">
+    </mat-form-field>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+  </div>
+</ng-template>
+
+<!-- add resource modal -->
+<ng-template #addResource let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Select Resource</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body" ngbAutofocus>
+    <div class="search">
+      <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2 bg-white" [floatLabel]="'never'">
+        <i matPrefix class="fas fa-search"></i>
+        <input matInput placeholder="Search">
+      </mat-form-field>
+    </div>
+    <!-- experiences -->
+    <div class="text-secondary font-weight-bold my-2">Experiences</div>
+    <div class="exp d-flex border-bottom py-2 dark-bg-hover">
+      <div class="icon align-self-center mr-2">
+        <img src="assets/images/discription.png" style="max-height:50px;">
+      </div>
+      <div class="name align-self-center">
+        English
+      </div>
+      <div class="arrow align-self-center ml-auto mr-3">
+        <i class="fa fa-angle-right"></i>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">0 Items Selected</button>
+  </div>
+</ng-template>
+
+<!-- email modal -->
+<ng-template #email let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Email</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body" ngbAutofocus>
+    <div class="row">
+      <div class="col-9 border-right">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>To</mat-label>
+          <input matInput type="text" placeholder="Recipients">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Subject</mat-label>
+          <input matInput type="text" placeholder="Subject">
+        </mat-form-field>
+        <div class="row">
+          <mat-form-field appearance="outline" class="col-8">
+            <mat-label>Message</mat-label>
+            <input matInput type="text" placeholder="Search Content">
+          </mat-form-field>
+          <div class="col-4 mt-3">
+            <div class="btn btn-primary" (click)="openModal(addResource)">
+              <i class="fas fa-file-medical mr-1"></i>Add resource
+            </div>
+          </div>
+        </div>
+        <mat-form-field appearance="outline" class="w-100">
+          <textarea matInput type="text" placeholder=""></textarea>
+        </mat-form-field>
+      </div>
+      <div class="col-3">
+        <h5>Sharing Settings</h5>
+        <mat-checkbox class="ml-2">Allow downloads</mat-checkbox>
+        <mat-checkbox class="ml-2">Send me a copy</mat-checkbox>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+  </div>
+</ng-template>
+
+<!-- get a link modal -->
+<ng-template #getLink let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Get a Link</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body" ngbAutofocus>
+    <mat-form-field appearance="outline" class="w-100">
+      <mat-label>Name</mat-label>
+      <input type="text" matInput placeholder="Name">
+    </mat-form-field>
+    <mat-checkbox>Allow downloads</mat-checkbox>
+    <mat-label class="d-block mt-3">Content</mat-label>
+    <div class="row">
+      <div class="col-9">
+        <mat-form-field appearance="outline" class="w-100 search">
+          <mat-label class="ml-2">Search for content</mat-label>
+          <input class="ml-2" type="text" matInput placeholder="Search for content">
+          <i class="fa fa-search text-secondary" matPrefix style="font-size: 18px;"></i>
+        </mat-form-field>
+      </div>
+      <div class="col-3 mt-3">
+        <div class="btn btn-primary">Browse</div>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+  </div>
+</ng-template>
+
+<!-- duplicate collection modal -->
+<ng-template #duplicate let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Duplicate Collection</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body" ngbAutofocus>
+    <mat-form-field appearance="outline" class="w-100">
+      <mat-label>Collection Name</mat-label>
+      <input type="text" matInput placeholder="Collection Name">
+    </mat-form-field>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+  </div>
+</ng-template>
+
+<!-- rename collection modal -->
+<ng-template #rename let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Rename Collection</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body" ngbAutofocus>
+    <mat-form-field appearance="outline" class="w-100">
+      <mat-label>Collection Name</mat-label>
+      <input type="text" matInput placeholder="Collection Name">
+    </mat-form-field>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+  </div>
+</ng-template>
+
+<!-- share with colleagues -->
+<ng-template #shareColl let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Add URL</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body" ngbAutofocus>
+    <div class="file-sharing">
+      File Sharing is ON
+      <mat-slide-toggle class="float-right" #sharingValue></mat-slide-toggle>
+    </div>
+    <div class="rounded border border-primary d-flex text-justify text-primary px-2 my-3 py-2">
+      <i class="fa fa-info-circle align-self-center mr-2"></i>
+      File sharing is enabled for this file. Anyone at Hi-Force Hydraulic Tools with the file link will be able to view
+      this file.
+    </div>
+    <div *ngIf="sharingValue.checked">
+      <mat-label>Share Options:</mat-label>
+      <mat-radio-group aria-label="Select an option" class="d-block">
+        <mat-radio-button value="link" class="mx-3" checked="true" #link>Share by
+          Link
+        </mat-radio-button>
+        <mat-radio-button value="email">Share by Email</mat-radio-button>
+      </mat-radio-group>
+      <hr>
+      <div class="link" *ngIf="link.checked">
+        <mat-form-field appearance="outline" class="w-100 copy-link">
+          <mat-label>Get Link</mat-label>
+          <input type="text" matInput value="https://www.google.com" readonly #linkText>
+          <button matSuffix class="btn btn-primary" (click)="copyLink(linkText)">Copy Link</button>
+        </mat-form-field>
+      </div>
+      <div class="email" *ngIf="!link.checked">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Email To</mat-label>
+          <input type="text" matInput placeholder="Enter Names or Email Address">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Note</mat-label>
+          <textarea type="text" matInput placeholder="Add a note ..."></textarea>
+        </mat-form-field>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')"
+      [disabled]="!sharingValue.checked">Share</button>
+  </div>
+</ng-template>
+
+<!-- add to collection -->
+<ng-template #addtoCollection let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Add to Collection</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body" ngbAutofocus>
+    <ul class="list-unstyled">
+      <li (click)="openModal(newCollection)" class="d-flex text-primary px-3 curs-ptr">
+        <div class="icon mr-2"><i class="fas fa-folder-plus" style="font-size:40px;"></i></div>
+        <div class="info align-self-center">Create a new Collection</div>
+      </li>
+      <li class="d-flex border-top px-3 py-2 curs-ptr" *ngFor="let t of testArr">
+        <div class="icon mr-2">
+          <img src="assets/images/discription.png" style="max-height:50px;">
+        </div>
+        <div class="info align-self-center">
+          <div class="name">ABC</div>
+          <div class="text-secondary" style="font-size:12px;">
+            <span class="modified">4 Days ago</span>
+            <span class="mx-2">|</span>
+            <span class="items">1 Item</span>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Share</button>
+  </div>
+</ng-template>
