--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -13,7 +13,8 @@
           <mat-error *ngIf="loginForm.get('email')!.hasError('required')">
             Email is required
           </mat-error>
-          <mat-error *ngIf="!loginForm.get('email')!.hasError('required') && loginForm.get('email')!.hasError('invalidEmail')">
+          <mat-error
+            *ngIf="!loginForm.get('email')!.hasError('required') && loginForm.get('email')!.hasError('invalidEmail')">
             Please enter a valid email address
           </mat-error>
         </mat-form-field>
@@ -27,7 +28,8 @@
         </mat-form-field>
         <div class="text-center">
           <button aria-label="LOG IN" [disabled]="loginForm!.invalid || disabled" class="mt-2 btn btn-primary">
-            <img class="loader-gif" *ngIf="disabled" src="assets/images/loader.gif">LOGIN
+            <app-loader [type]="'btn'" *ngIf="disabled"></app-loader> <!-- loader -->
+            LOGIN
           </button>
         </div>
       </form>
