--- a/src/app/shared/components/loader/loader.component.html
+++ b/src/app/shared/components/loader/loader.component.html
@@ -1,1 +1,3 @@
-<p>loader works!</p>
+<div class="overflow-hidden" class="{{spinnerClass}}">
+  <mat-spinner color="accent" class="mx-auto"></mat-spinner>
+</div>
