--- a/src/app/user/group/group.component.html
+++ b/src/app/user/group/group.component.html
@@ -1,6 +1,4 @@
-<div *ngIf="loading" style="min-height: 70vh; padding-top: 30vh;">
-  <mat-spinner color="accent" class="mx-auto page-spinner"></mat-spinner>
-</div>
+<app-loader [type]="'page'" *ngIf="loading"></app-loader> <!-- loader -->
 
 <div class="groups-section overflow-hidden" *ngIf="!loading">
   <div class="buttons-row row mt-3 justify-content-between mx-2">
@@ -44,8 +42,10 @@
                   <button class="btn btn-light dropdown-toggle" (click)="toggleDropdown($event)">
                     Division
                   </button>
-                  <div class="dropdown-menu dropdown-menu-right large-dropdown-menu" #divisionDropDown aria-labelledby="divisionTrigger">
-                    <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2 px-3" [floatLabel]="'never'">
+                  <div class="dropdown-menu dropdown-menu-right large-dropdown-menu" #divisionDropDown
+                    aria-labelledby="divisionTrigger">
+                    <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2 px-3"
+                      [floatLabel]="'never'">
                       <i matPrefix class="fas fa-search"></i>
                       <input matInput placeholder="Search ...">
                     </mat-form-field>
@@ -69,7 +69,8 @@
                   <button class="btn btn-light dropdown-toggle" (click)="toggleDropdown($event)">
                     Experience
                   </button>
-                  <div class="dropdown-menu dropdown-menu-right large-dropdown-menu" #expDropDown aria-labelledby="divisionTrigger">
+                  <div class="dropdown-menu dropdown-menu-right large-dropdown-menu" #expDropDown
+                    aria-labelledby="divisionTrigger">
                     <div class="input-group mb-2 p-2">
                       <div class="input-group-prepend">
                         <span class="input-group-text bg-white">
@@ -139,7 +140,8 @@
             </div>
             <ul class="pagination">
               <li class="page-item disabled">
-                <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i class="fas fa-chevron-left"></i></a>
+                <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i
+                    class="fas fa-chevron-left"></i></a>
               </li>
               <li class="page-item active"><a class="page-link bg-hi-grey" href="javascript:void(0)">1</a>
               </li>
@@ -154,9 +156,8 @@
       </div>
     </div>
     <div [ngClass]="{'workspace w-100 col-md-4': true,'hide' : !showDoc, 'show': showDoc}">
-      <div *ngIf="docLoading" style="min-height: 50vh; padding-top: 30vh;">
-        <mat-spinner color="accent" class="mx-auto page-spinner"></mat-spinner>
-      </div>
+      <app-loader [type]="'page'" *ngIf="docLoading"></app-loader> <!-- loader -->
+
       <div class="doc" *ngIf="grpDetail && !docLoading">
         <div class="card">
           <div class="card-header row m-0">
@@ -296,7 +297,7 @@
     </div>
     <div class="modal-footer">
       <button type="submit" class="btn btn-primary" [disabled]="groupForm!.invalid || disabled">
-        <mat-spinner color="primary" class="mx-auto btn-spinner d-inline-block" *ngIf="disabled"></mat-spinner>
+        <app-loader [type]="'btn'" *ngIf="disabled"></app-loader> <!-- loader -->
         Save
       </button>
     </div>
