--- a/src/app/setting/division/division.component.html
+++ b/src/app/setting/division/division.component.html
@@ -141,7 +141,7 @@
     </div>
     <div class="modal-footer">
       <button class="btn btn-primary" [disabled]="hubForm!.invalid || disabled">
-        <img class="loader-gif" *ngIf="disabled" src="assets/images/loader.gif">{{type=='add'?'Save':'Update'}}
+        <app-loader [type]="'btn'" *ngIf="disabled"></app-loader>{{type=='add'?'Save':'Update'}}
       </button>
     </div>
   </form>
