--- a/src/app/shared/components/loader/loader.component.html
+++ b/src/app/shared/components/loader/loader.component.html
@@ -1,3 +1,3 @@
-<div class="overflow-hidden" class="{{spinnerClass}}">
+<div class="overflow-hidden" class="{{type+'-spinner'}}">
   <mat-spinner color="accent" class="mx-auto"></mat-spinner>
 </div>
