--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -6,8 +6,36 @@ PDF URL <input type="text" [(ngModel)]="pdfURL" /> <button (click)="pdfRender()"
 
 
 <canvas id="canvas-id"></canvas>
+<div class="row">
+  <div class="col-md-3">
+    <select id="font-size">
+      <option value="10">10</option>
+      <option value="12">12</option>
+      <option value="16" selected>16</option>
+      <option value="18">18</option>
+      <option value="24">24</option>
+      <option value="32">32</option>
+      <option value="48">48</option>
+      <option value="64">64</option>
+      <option value="72">72</option>
+      <option value="108">108</option>
+    </select>
+  </div>
+  <div class="col-md-3">
+    <button class="btn active" style="background-color: #212121;"></button>
+    <button class="btn" style="background-color: red;"></button>
+    <button class="btn" style="background-color: blue;"></button>
+    <button class="btn" style="background-color: green;"></button>
+    <button class="btn" style="background-color: yellow;"></button>
+  </div>
+  <div class="col-md-3">
+    <button class="btn"><i class="fas fa-bus-alt" title="Pencil" onclick="enablePencil(event)"></i></button>
+    <button class="btn"><i class="fas fa-font" title="Add Text" onclick="enableAddText(event)"></i></button>
+  </div>
+</div>
 
 <ng-container *ngFor='let in of counter(totalPages) ;let i = index'>
+  <canvas [attr.id]="'canv-d-'+i" style="display:none"></canvas>
   <div class="page" style="display:none" [attr.id]="'page-d-'+i"></div>
   <!-- <div class="annotation" style="display:none" [attr.id]="'annotation-'+i"></div> -->
 </ng-container>
