--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="col-md-12">
-    <div id='pdf-div' class='pdf-view'></div>
+    <div id='pdf-div' style="display:none" class='pdf-view'></div>
   </div>
 </div>
 
