--- a/src/app/hub/tags/tags.component.html
+++ b/src/app/hub/tags/tags.component.html
@@ -7,8 +7,9 @@
         <div class="card-body">
           <div class="text-hi-dark-grey">Tags</div>
           <ul class="list-unstyled ml-2 mt-1">
-            <li class="dark-bg-hover px-2 py-1 rounded mt-2">All tags</li>
-            <li class="dark-bg-hover px-2 py-1 rounded mt-2">Uncategorized Tags</li>
+            <li class="dark-bg-hover px-2 py-1 rounded mt-2" (click)="getAllTags()">All tags ({{allTags.length}})</li>
+            <li class="dark-bg-hover px-2 py-1 rounded mt-2" (click)="getUnCatTags()">Uncategorized Tags
+              ({{numUnCatTags}})</li>
           </ul>
           <hr>
           <div class="text-hi-dark-grey">
@@ -76,13 +77,16 @@
           <h5 class="card-title px-3">
             <div class="heading">
               <div class="search">
-                <mat-form-field appearance="outline" class="custom-mat-input w-100 mb-2" [floatLabel]="'never'">
-                  <i matPrefix class="fas fa-search"></i>
-                  <input matInput placeholder="Search ...">
-                  <div matSuffix class="curs-ptr">
-                    <i class="fas fa-sliders-h"></i>
-                  </div>
-                </mat-form-field>
+                <form name="tagForm" (ngSubmit)="addTag()" [formGroup]="tagForm" novalidate>
+                  <mat-form-field appearance="outline" class="custom-mat-input mb-2" [floatLabel]="'never'"
+                    style="width:85%;">
+                    <input matInput placeholder="Tag Name" class="ml-0" formControlName="name">
+                  </mat-form-field>
+                  <button type="submit" class="btn btn-primary ml-3" [disabled]="tagForm!.invalid || disabled">
+                    <app-loader [type]="'btn'" *ngIf="disabled"></app-loader>
+                    Create
+                  </button>
+                </form>
               </div>
             </div>
           </h5>
@@ -98,41 +102,12 @@
                 </tr>
               </thead>
               <tbody>
-                <tr (click)="toggleInfo($event)">
+                <tr (click)="toggleInfo($event)" *ngFor="let tag of tags" id="tag.id">
                   <td>
-                    Group Stock Position - Regional Offices<br />
-                    <span class="badge badge-light p-2 mt-2 mt-sm-0">Stock</span>
-                    <span class="badge badge-light p-2 mt-2 mt-sm-0">Technical Distributors</span>
+                    {{tag.name}}
                   </td>
-                  <td class="text-hi-dark-grey">Used in Filter</td>
-                  <td>19 Aug 2020</td>
-                </tr>
-                <tr (click)="toggleInfo($event)">
-                  <td>
-                    Group Stock Position - Regional Offices<br />
-                    <span class="badge badge-light p-2 mt-2 mt-sm-0">Stock</span>
-                    <span class="badge badge-light p-2 mt-2 mt-sm-0">Technical Distributors</span>
-                  </td>
-                  <td class="text-hi-dark-grey">Used in Filter</td>
-                  <td>19 Aug 2020</td>
-                </tr>
-                <tr (click)="toggleInfo($event)">
-                  <td>
-                    Group Stock Position - Regional Offices<br />
-                    <span class="badge badge-light p-2 mt-2 mt-sm-0">Stock</span>
-                    <span class="badge badge-light p-2 mt-2 mt-sm-0">Technical Distributors</span>
-                  </td>
-                  <td class="text-hi-dark-grey">Used in Filter</td>
-                  <td>19 Aug 2020</td>
-                </tr>
-                <tr (click)="toggleInfo($event)">
-                  <td>
-                    Group Stock Position - Regional Offices<br />
-                    <span class="badge badge-light p-2 mt-2 mt-sm-0">Stock</span>
-                    <span class="badge badge-light p-2 mt-2 mt-sm-0">Technical Distributors</span>
-                  </td>
-                  <td class="text-hi-dark-grey">Used in Filter</td>
-                  <td>19 Aug 2020</td>
+                  <td class="text-hi-dark-grey">No Data</td>
+                  <td>No Data</td>
                 </tr>
               </tbody>
             </table>
