--- a/src/app/hub/tags/tags.component.html
+++ b/src/app/hub/tags/tags.component.html
@@ -7,9 +7,9 @@
         <div class="card-body">
           <div class="text-hi-dark-grey">Tags</div>
           <ul class="list-unstyled ml-2 mt-1">
-            <li class="dark-bg-hover px-2 py-1 rounded mt-2" (click)="getAllTags()">All tags ({{allTags.length}})</li>
-            <li class="dark-bg-hover px-2 py-1 rounded mt-2" (click)="getUnCatTags()">Uncategorized Tags
-              ({{numUnCatTags}})</li>
+            <li class="dark-bg-hover px-2 py-1 rounded mt-2" (click)="getTags($event)" id="all">All tags</li>
+            <li class="dark-bg-hover px-2 py-1 rounded mt-2" (click)="getTags($event)" id=0>Uncategorized Tags
+            </li>
           </ul>
           <hr>
           <div class="text-hi-dark-grey">
@@ -115,21 +115,23 @@
           <div class="card-footer row justify-content-between mx-0">
             <div class="pages">
               <mat-form-field appearance="outline" class="mr-2">
-                <mat-select>
+                <mat-select [(ngModel)]="pageSize" (selectionChange)="pageSizeChange()">
                   <mat-option value="10">10</mat-option>
-                  <mat-option value="10">20</mat-option>
+                  <mat-option value="20">20</mat-option>
+                  <mat-option value="50">50</mat-option>
+                  <mat-option value="100">100</mat-option>
                 </mat-select>
               </mat-form-field>
-              <span>Showing 1-10 of 100 </span>
+              <span>Showing 1-10 of {{numAllTags}}</span>
             </div>
             <ul class="pagination">
               <li class="page-item disabled">
                 <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i
                     class="fas fa-chevron-left"></i></a>
               </li>
-              <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">1</a></li>
-              <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">2</a></li>
-              <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">3</a></li>
+              <li class="page-item" *ngFor="let item of [].constructor(paginationNum); let i = index">
+                <a class="page-link bg-hi-grey" href="javascript:void(0)">{{i+1}}</a>
+              </li>
               <li class="page-item">
                 <a class="page-link bg-hi-grey" href="javascript:void(0)"><i class="fas fa-chevron-right"></i></a>
               </li>
