gotoLocation for page, handle thumbnail page event,a nnotation data add/upd, del, set annotation data

--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,4 +1,5 @@
 <p>test works!</p>PDF URL <input type="text" [(ngModel)]="pdfURL" /> <button (click)="renderPDf2()">Render PDF</button>
+<input type="text" [(ngModel)]="goTo" /><button (click)="gotoPage()">Go TO</button>
 
 <div class="row">
   <div class="col-md-12">
