--- a/src/app/hub/tags/tags.component.html
+++ b/src/app/hub/tags/tags.component.html
@@ -82,6 +82,12 @@
         <div class="card-body rounded-bottom px-0 pb-0">
           <h5 class="card-title px-3">
             <div class="heading">
+              <mat-form-field appearance="outline" class="custom-mat-input float-right mb-3" [floatLabel]="'never'"
+                style="min-width: 300px;">
+                <i matPrefix class="fa fa-search text-secondary"></i>
+                <input matInput placeholder="Search Tag ..." class="ml-0" (keyup)="getTags()"
+                  [(ngModel)]="tagSearchName">
+              </mat-form-field>
               <div class="search" *ngIf="tagForm">
                 <form name="tagForm" (ngSubmit)="addTags()" [formGroup]="tagForm" novalidate>
                   <mat-form-field class="custom-mat-input mb-2" appearance="outline" style="width:85%;"
@@ -91,16 +97,11 @@
                         {{tag}}
                         <i class="fa fa-times" matChipRemove></i>
                       </mat-chip>
-                      <input placeholder="Separate tags by comma or enter" [matChipInputFor]="tagList"
+                      <input placeholder="Add Tags (Separate tags by comma or enter)" [matChipInputFor]="tagList"
                         [matChipInputSeparatorKeyCodes]="separatorKeysCodes" matChipInputAddOnBlur
                         (matChipInputTokenEnd)="addChips($event)" formControlName="name">
                     </mat-chip-list>
                   </mat-form-field>
-                  <!-- <mat-form-field appearance="outline" class="custom-mat-input mb-2" [floatLabel]="'never'"
-                    style="width:85%;">
-                    <input matInput placeholder="Add Tag Name to Create New Tag" class="ml-0" formControlName="name"
-                      required>
-                  </mat-form-field> -->
                   <button type="submit" class="btn btn-primary ml-3" [disabled]="tagForm!.invalid || tagAddDisabled">
                     <app-loader [type]="'btn'" *ngIf="tagAddDisabled"></app-loader>
                     Create
@@ -143,16 +144,16 @@
                   <mat-option value="100">100</mat-option>
                 </mat-select>
               </mat-form-field>
-              <span>Showing 1-10 of {{numAllTags}}</span>
+              <!-- <span>Showing 1-10 of {{numAllTags}}</span> -->
             </div>
             <ul class="pagination">
               <li class="page-item disabled">
                 <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i
                     class="fas fa-chevron-left"></i></a>
               </li>
-              <li class="page-item" *ngFor="let item of [].constructor(paginationNum); let i = index">
+              <!-- <li class="page-item" *ngFor="let item of [].constructor(paginationNum); let i = index">
                 <a class="page-link bg-hi-grey" href="javascript:void(0)">{{i+1}}</a>
-              </li>
+              </li> -->
               <li class="page-item">
                 <a class="page-link bg-hi-grey" href="javascript:void(0)"><i class="fas fa-chevron-right"></i></a>
               </li>
